@@ -2,15 +2,20 @@ package com.a304.wildworker.ethereum.contract;
 
 import com.a304.wildworker.ethereum.helper.TransactionSendHelper;
 import java.io.IOException;
+import java.math.BigInteger;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import org.web3j.abi.TypeReference;
 import org.web3j.abi.datatypes.Address;
 import org.web3j.abi.datatypes.Function;
+import org.web3j.abi.datatypes.Uint;
 import org.web3j.abi.datatypes.generated.Uint256;
 import org.web3j.protocol.core.methods.response.TransactionReceipt;
+import org.web3j.utils.Numeric;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -19,16 +24,52 @@ public class StationContract {
 
     private final TransactionSendHelper transactionSendHelper;
 
-    public void autoMine(String stationAddress, String userAddress, long amount)
+    public CompletableFuture<TransactionReceipt> autoMine(String stationAddress, String userAddress,
+            long amount)
             throws IOException {
         Function function = new Function("autoMine",
-                List.of(new Address(userAddress), new Uint256(amount)),
+                List.of(new Address(userAddress), new Uint256(amount)), Collections.emptyList());
+
+        return transactionSendHelper.sendContractAsync(stationAddress, function);
+    }
+
+    public CompletableFuture<TransactionReceipt> invest(String stationAddress, String userAddress,
+            long amount)
+            throws IOException {
+        Function function = new Function("recordInvestment", List.of(new Uint256(amount)),
                 Collections.emptyList());
 
-        TransactionReceipt receipt = transactionSendHelper.sendContract(stationAddress,
-                function);
-
-        log.info("autoMine : {}", receipt);
-        log.info("revert : {}", receipt.getRevertReason());
+        return transactionSendHelper.sendContractAsync(stationAddress, userAddress, function);
     }
+
+    public CompletableFuture<TransactionReceipt> investReward(String stationAddress,
+            Long currentCommissionOfStation) throws IOException {
+        Function function = new Function("countChargeEvery10Min",
+                List.of(new Uint256(currentCommissionOfStation)), Collections.emptyList());
+
+        return transactionSendHelper.sendContractAsync(stationAddress, function);
+    }
+
+    public BigInteger getInvestmentOfUser(String stationAddress, String userAddress)
+            throws IOException {
+        Function function = new Function("investors",
+                List.of(new Address(userAddress)),
+                List.of(new TypeReference<Uint>() {
+                }));
+        String result = transactionSendHelper.sendCall(stationAddress, function);
+
+        return Numeric.decodeQuantity(result);
+    }
+
+    public BigInteger getInvestmentAmount(String stationAddress)
+            throws IOException {
+        Function function = new Function("investmentAmount",
+                Collections.emptyList(),
+                List.of(new TypeReference<Uint>() {
+                }));
+        String result = transactionSendHelper.sendCall(stationAddress, function);
+
+        return Numeric.decodeQuantity(result);
+    }
+
 }
